# node_native_rules

./: .bazelrc  MODULE.bazel  WORKSPACE.bazel  package.json  pnpm-lock.yaml
examples/: BUILD.bazel  example.cc
natives/: node_binary.bzl
